--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "test"
   ],
   "scripts": {
-    "deploy:holesky": "npx hardhat run scripts/1_deploy_contracts.js --network holesky",
     "deploy:mainnet": "npx hardhat run scripts/1_deploy_contracts.js --network mainnet",
+    "verify:mainnet": "npx hardhat run scripts/2_verify_contracts.js --network mainnet",
+    "deploy:holesky": "npx hardhat run scripts/1_deploy_contracts.js --network holesky",
+    "verify:holesky": "npx hardhat run scripts/2_verify_contracts.js --network holesky",
     "deploy:polygon": "npx hardhat run scripts/1_deploy_contracts.js --network polygon",
+    "verify:polygon": "npx hardhat run scripts/2_verify_contracts.js --network polygon",
     "deploy:sepolia": "npx hardhat run scripts/1_deploy_contracts.js --network sepolia",
+    "verify:sepolia": "npx hardhat run scripts/2_verify_contracts.js --network sepolia",
     "test": "npx hardhat test",
     "lint:js": "npx eslint .",
     "lint:js:fix": "npx eslint . --fix",
