--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule && npx sol2uml class contracts -c -b PauseModule",
     "uml-mocks": "npx sol2uml class -c contracts/mocks/RuleEngine",
     "size": "npx hardhat size-contracts",
-    "test:burn": "npx hardhat test test/standard/modules/ERC20BurnModule.test.js test/proxy/modules/ERC20BurnModule.test.js",
-    "test:mint": "npx hardhat test test/standard/modules/ERC20MintModule.test.js test/proxy/modules/ERC20MintModule.test.js",
+    "test:erc20Burn": "npx hardhat test test/standard/modules/ERC20BurnModule.test.js test/proxy/modules/ERC20BurnModule.test.js",
+    "test:erc20Mint": "npx hardhat test test/standard/modules/ERC20MintModule.test.js test/proxy/modules/ERC20MintModule.test.js",
     "test:erc20Base": "npx hardhat test test/standard/modules/ERC20BaseModule.test.js test/proxy/modules/ERC20BaseModule.test.js",
     "test:debt": "npx hardhat test test/standard/modules/DebtModule.test.js test/proxy/modules/DebtModule.test.js",
     "test:base": "npx hardhat test test/standard/modules/BaseModule.test.js test/proxy/modules/BaseModule.test.js",
     "test:pause": "npx hardhat test test/standard/modules/PauseModule.test.js test/proxy/modules/PauseModule.test.js",
     "test:creditEvents": "npx hardhat test test/standard/modules/CreditEventsModule.test.js test/proxy/modules/CreditEventsModule.test.js",
-    "test:validation": "npx hardhat test test/standard/modules/ValidationModule/ValidationModule.test.js test/proxy/modules/ValidationModule/ValidationModule.test.js test/standard/modules/ValidationModule/ValidationModuleConstructor.test.js test/proxy/modules/ValidationModule/ValidationModuleConstructor.test.js test/standard/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js test/proxy/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js",
+    "test:validation": "npx hardhat test test/standard/modules/ValidationModule/ValidationModule.test.js",
     "test:authorization": "npx hardhat test test/standard/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js",
     "test:snapshot": "npx hardhat test test/standard/modules/ERC20SnapshotModule.test.js test/proxy/modules/ERC20SnapshotModule.test.js",
     "test:enforcement": "npx hardhat test test/standard/modules/EnforcementModule.test.js test/proxy/modules/EnforcementModule.test.js",
@@ -62,9 +62,11 @@
   },
   "homepage": "https://github.com/CMTA/CMTAT",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/hardhat-upgrades": "^2.1.1",
+    "@openzeppelin/hardhat-upgrades": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "chai": "^4.3.7",
     "coveralls": "^3.1.1",
@@ -92,8 +94,7 @@
     "solidity-code-metrics": "^0.0.25",
     "solidity-coverage": "^0.8.5",
     "solidity-docgen": "^0.6.0-beta.35",
-    "surya": "^0.4.11",
-    "web3": "^1.9.0"
+    "surya": "^0.4.11"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
