--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "test:authorization": "npx hardhat test test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/TransferAdminship.test.js",
     "test:base": "npx hardhat test test/proxy/modules/BaseModule.test.js",
     "test:erc20Base": "npx hardhat test test/proxy/modules/ERC20BaseModule.test.js",
-    "test:deployment": "npx hardhat test test/deployment/deployment.test.js"
+    "test:deployment": "npx hardhat test test/deployment/*.test.js",
+    "test:general": "npx hardhat test test/proxy/general/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -62,10 +63,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
     "@nomicfoundation/hardhat-verify": "^1.1.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/hardhat-upgrades": "^2.4.3",
     "chai": "^4.3.7",
-    "coveralls": "^3.1.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-standard": "^17.0.0",
@@ -90,10 +89,10 @@
     "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "^0.8.2",
     "solidity-docgen": "^0.6.0-beta.35",
-    "surya": "^0.4.6",
-    "web3": "^1.10.0"
+    "surya": "^0.4.6"
   },
   "dependencies": {
-    "@metamask/eth-sig-util": "^5.1.0"
+    "@metamask/eth-sig-util": "^5.1.0",
+    "@openzeppelin/contracts": "4.8.1"
   }
 }
