--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "test:creditEvents": "npx hardhat test test/standard/modules/CreditEventsModule.test.js test/proxy/modules/CreditEventsModule.test.js",
     "test:validation": "npx hardhat test test/standard/modules/ValidationModule/ValidationModule.test.js test/proxy/modules/ValidationModule/ValidationModule.test.js test/standard/modules/ValidationModule/ValidationModuleConstructor.test.js test/proxy/modules/ValidationModule/ValidationModuleConstructor.test.js test/standard/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js test/proxy/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js",
     "test:authorization": "npx hardhat test test/standard/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js",
-    "test:snapshot": "npx hardhat test test/standard/modules/ERC20SnapshotModule.test.js test/proxy/modules/ERC20SnapshotModule.test.js",
+    "test:snapshot": "npx hardhat test test/standard/modules/SnapshotModule/SnapshotModule.test.js test/standard/modules/SnapshotModule/SnapshotModuleConstructor.test.js test/proxy/modules/SnapshotModule/SnapshotModule.test.js test/proxy/modules/SnapshotModule/SnapshotModuleConstructor.test.js",
     "test:enforcement": "npx hardhat test test/standard/modules/EnforcementModule.test.js test/proxy/modules/EnforcementModule.test.js",
     "test:metaTx": "npx hardhat test test/standard/modules/MetaTxModule.test.js test/proxy/modules/MetaTxModule.test.js",
     "test:proxy": "npx hardhat test test/proxy/general/factory/Beacon.test.js test/proxy/general/factory/Transparent.test.js test/proxy/general/factory/TransparentSalt.test.js test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js test/proxy/general/UpgradeProxyUUPS.test.js",
-    "test:deployment": "npx hardhat test test/deployment/deployment.test.js",
+    "test:deployment": "npx hardhat test test/deployment/deployment.test.js test/deployment/deploymentERC1363Proxy.test.js test/deployment/deploymentERC1363Standalone.test.js",
     "test:document": "npx hardhat test test/standard/modules/DocumentModule.test.js",
-    "test:debt": "npx hardhat test test/standard/modules/DebtModule.test.js"
+    "test:debt": "npx hardhat test test/standard/modules/DebtModule.test.js test/proxy/modules/DebtModule.test.js"
   },
   "repository": {
     "type": "git",
